Added table users + JWT protected endpoints
