# src/Models/User.php
@@ -1,0 +1,10 @@
+<?php
+
+namespace Dougl\Projetoweb\Models;
+
+class User {
+    public int $id;
+    public string $username;
+    public string $password;
+    public string $rules;
+} 
